# Synap

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  readme.md  readme_en-us.md
.github/workflows/: android.yml  cli.yml  desktop.yml  desktop_windows.yml  relay.yml  web.yml
android/: .gitignore  keystore.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/fuwaki/synap/: ExampleInstrumentedTest.kt
android/app/src/androidTest/java/com/synap/app/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: ai_preset_models.json
android/app/src/main/java/com/fuwaki/synap/: MainActivity.kt  SynapApp.kt  SynapApplication.kt  SynapCore.kt  SynapLib.kt
android/app/src/main/res/drawable/: ic_synapicon_old_vector.xml  widget_bg_round.xml
android/app/src/main/res/layout/: widget_quick_note.xml
android/app/src/main/res/mipmap-anydpi-v26/: synapicon.xml  synapicon_old.xml
android/app/src/main/res/values/: strings.xml  synapicon_background.xml  themes.xml
android/app/src/main/res/values-ar/: strings.xml
android/app/src/main/res/values-bn/: strings.xml
android/app/src/main/res/values-de/: strings.xml
android/app/src/main/res/values-en/: strings.xml
android/app/src/main/res/values-es/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/values-hi/: strings.xml
android/app/src/main/res/values-it/: strings.xml
android/app/src/main/res/values-ja/: strings.xml
android/app/src/main/res/values-ko/: strings.xml
android/app/src/main/res/values-pt/: strings.xml
android/app/src/main/res/values-ru/: strings.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/app/src/main/res/values-zh-rHK/: strings.xml
android/app/src/main/res/values-zh-rTW/: strings.xml
android/app/src/main/res/xml/: quick_note_widget_info.xml
android/gradle/: libs.versions.toml  rust-uniffi.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
cli/src/: main.rs  output.rs  support.rs
cli/src/commands/: amend.rs  capture.rs  graph.rs  list.rs  mod.rs  reply.rs  scrub.rs  search.rs  show.rs  stats.rs  sync.rs  tag.rs  trace.rs  void.rs
cli/src/net/: conn.rs
core/: Cargo.toml  EXAMPLES.md  README.md
core/benches/: service_benchmark.rs
core/benches/fixture/: mod.rs
core/src/: dto.rs  envelope.rs  error.rs  lib.rs  service.rs  text.rs
core/src/crypto/: channel.rs  fingerprint.rs  identity.rs  mod.rs  sealed_envelope.rs  signing.rs  trust.rs
core/src/db/: codec.rs  dagstorage.rs  kvstore.rs  mod.rs  onetomany.rs  types.rs  umap.rs  vector.rs
core/src/models/: crypto.rs  mod.rs  note.rs  relay_peer.rs  sync_stats.rs  tag.rs  util.rs
core/src/models/note/: entity.rs  mod.rs  reader.rs  record.rs  tests.rs
core/src/nlp/: embedding.rs  index.rs  internal.rs  metrics.rs  mod.rs  test.rs  text.rs  traits.rs  types.rs
core/src/nlp/retrieval/: mod.rs
core/src/nlp/tag/: index.rs  mod.rs  text.rs
core/src/search/: mod.rs  test.rs
core/src/search/semantic/: mod.rs
core/src/service/: convert.rs  discovery.rs  mod.rs  note_command.rs  note_query.rs  peer.rs  relay_peer.rs  search.rs  starmap.rs  support.rs  sync.rs  tests.rs
core/src/sync/: frame.rs  mod.rs  protocol.rs  relay.rs  relay_service.rs  service.rs  share.rs  share_service.rs  share_tests.rs  tests.rs
core/src/views/: mod.rs  note_version_view.rs  note_view.rs  starmap.rs  timeline_view.rs
coreffi/: Cargo.toml  build-android.sh  build.rs  uniffi.toml
coreffi-shared/: Cargo.toml
coreffi-shared/src/: adapter.rs  error.rs  lib.rs  service.rs  synap.udl  types.rs
coreffi-uniffi029/: Cargo.toml  build.rs  uniffi.toml
coreffi-uniffi029/src/: lib.rs
coreffi/src/: connection.rs  error.rs  lib.rs  service.rs  synap.udl  types.rs
coreffi/tests/: bindings_test.rs
corenet/: Cargo.toml
corenet/src/: discovery.rs  error.rs  lib.rs  runtime.rs  sync_service.rs
desktop/src/: app.rs  state.rs
desktop/src/core/: mod.rs
desktop_linux/: Cargo.toml
desktop_linux/src/: app.rs  core.rs  domain.rs  main.rs  style.css  usecase.rs
desktop_linux/src/app/: message.rs
desktop_linux/src/ui/: editor.rs  mod.rs  note_widgets.rs  shell.rs  style.css  theme.rs
desktop_linux/src/ui/editor/: css.rs  editor.css  markdown.rs  mod.rs  model.rs  parser.rs  renderer.rs  widget.rs
desktop_windows/: MainWindow.xaml  MainWindow.xaml.cs  desktop_windows.csproj
docs/adr/: 0001-core-remains-platform-agnostic.md  0002-corenet-scope-and-core-http-boundary.md  0003-zero-trust-relay-for-cross-network-sync.md  0004-sync-and-relay-cryptography-design.md  0005-uniffi-shared-facade-versioned-adapters.md  README.md
relay/: Cargo.toml  Dockerfile  docker-compose.example.yml
relay/src/: app.rs  cli.rs  embedded_redis.rs  error.rs  http.rs  lib.rs  main.rs  redis.rs
relay/tests/: relay_http.rs
tools/importers/xiaomi-notes/: Cargo.toml  README.md
tools/importers/xiaomi-notes/src/: main.rs
web/: Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  uno.config.ts  vite.config.ts
web/scripts/: prepare-bindings.mjs
web/src/: main.rs
web/src/app/: mod.rs  server.rs  utils.rs
web/src/app/pages/home/: mod.rs  state.rs
web/src/app/pages/home/components/: editor_actions.rs  mod.rs  note_list.rs  note_viewer.rs  settings_panel.rs  sidebar_header.rs  status_bar.rs  tag_editor.rs  tag_suggestions.rs
web/src/app/ui/: button.rs  confirm_dialog.rs  mod.rs  search_box.rs
web/src/lib/: types.ts
web/src/lib/remote/: synap.remote.ts
web/src/lib/server/: coreffi.ts  env.ts  service.ts  sync-runtime.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/api/settings/export/: +server.ts
web/src/routes/api/settings/import/: +server.ts
web/src/styles/: app.scss
web/src/styles/components/: _search.scss  _sidebar.scss
web/style/: main.scss
web/style/components/: _button.scss  _editor.scss  _note-list.scss
xtask/: Cargo.toml
xtask/src/: main.rs
(+119 files in other folders)
