[package]
name = "synap-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
memchr = "2.8.0"
nucleo = "0.5.0"
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.10.0"

redb = "3.1.0"
serde = "1.0.228"
tempfile = "3.0"


thiserror = "2.0"
uuid = { version = "1.22.0", features = ["serde", "v7", "v5", "v4"] }
lz4_flex = "0.11"

[dev-dependencies]
tempfile = "3.0"
divan = "0.1.21"

[[bench]]
name = "service_benchmark"
harness = false
