[package]
name = "synap-coreffi-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
synap-core = { path = "../core" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
lazy_static = "1.4"
