[package]
name = "synap-coreffi-uniffi029"
version = "0.1.0"
edition = "2021"

[lib]
name = "uniffi_synap_coreffi_uniffi029"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
synap-core = { path = "../core" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
lazy_static = "1.4"
uniffi = "=0.29.4"

[dev-dependencies]
tempfile = "3.0"
uniffi_bindgen = "=0.29.4"

[build-dependencies]
uniffi_build = "=0.29.4"
