[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
bytes = "1.10.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
mini-redis = "0.4.1"
postcard = { version = "1.1.3", features = ["alloc"] }
redis_rs = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
synap-core = { path = "../core" }
tokio = { version = "1.52.2", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower = "0.5.2"
