[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
camino = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
uniffi_bindgen_031 = { package = "uniffi_bindgen", version = "=0.31.0" }
uniffi_bindgen_029 = { package = "uniffi_bindgen", version = "=0.29.4" }
uniffi_bindgen_cs = { package = "uniffi-bindgen-cs", git = "https://github.com/NordSecurity/uniffi-bindgen-cs", tag = "v0.10.0+v0.29.4" }
