[package]
name = "synap-xiaomi-notes-import"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xiaomi-notes-import"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
regex = "1.12.2"
rusqlite = "0.37.0"
synap-core = { path = "../../../core" }
